tdf#105262 Clean up CopyGraphic

It's only available in read-only mode, it doesn't work and
the images can be copied with the normal copy option

Change-Id: I07bdfbd751665b5b0ddf3ff72d9e5f0fd2bdba5c